springboot/spring-boot-admin-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-admin-client
  namespace: spring-boot-sbc
spec:
  selector:
    app: spring-boot-admin-client
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-client-deployment
  namespace: spring-boot-sbc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-boot-admin-client
  template:
    metadata:
      labels:
        app: spring-boot-admin-client
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/transparent-proxy': 'true'
        'consul.hashicorp.com/transparent-proxy-overwrite-probes': 'true'
        'k8s.v1.cni.cncf.io/networks': '[{ "name":"consul-cni" }]'
    spec:
      serviceAccountName: spring-boot-admin-client
      containers:
        - name: spring-boot-admin-client
          # image repo: https://github.com/hashicorp-support/consul-springboot-client/tree/main
          image: natemollica/spring-boot-admin-client:latest
          ports:
            - name: http
              containerPort: 9001
              protocol: TCP
