springboot/spring-boot-admin-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-admin-server
  namespace: spring-boot-sba
spec:
  selector:
    app: spring-boot-admin-server
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-admin-server
  namespace: spring-boot-sba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-admin-server
  template:
    metadata:
      labels:
        app: spring-boot-admin-server
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/transparent-proxy': 'true'
        'consul.hashicorp.com/transparent-proxy-overwrite-probes': 'true'
        'k8s.v1.cni.cncf.io/networks': '[{ "name":"consul-cni" }]'
    spec:
      serviceAccountName: spring-boot-admin-server
      containers:
        - name: spring-boot-admin-server
          # image repo: https://github.com/hashicorp-support/consul-springboot-admin-server
          image: natemollica/spring-boot-admin-server:latest
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
