springboot/ingress.yaml
# https://docs.openshift.com/container-platform/4.14/networking/routes/route-configuration.html#nw-ingress-creating-a-route-via-an-ingress_route-configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sba-api-gateway
  namespace: spring-boot-sba
  labels:
    app: sba-api-gateway
  annotations:
    'route.openshift.io/termination': "edge"
spec:
  rules:
    - host: spring-boot-admin.apps.consul-openshift-alert-foal.nathan-mollica.sbx.hashidemos.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sba-api-gateway
                port:
                  number: 9080
  tls:
    - {}
