springboot/spring-boot-admin-route.yaml
#apiVersion: gateway.networking.k8s.io/v1beta1
#kind: HTTPRoute
#metadata:
#  name: spring-boot-admin-server
#  namespace: spring-boot-sba
#  labels:
#    app: spring-boot-admin-server
#spec:
#  parentRefs:
#    - name: api-gateway
#      namespace: spring-boot-sba
#  rules:
#    - backendRefs:
#        - kind: Service
#          name: spring-boot-admin-server
#          namespace: spring-boot-sba
#          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: sba-tcp-ingress
  namespace: spring-boot-sba
spec:
  parentRefs:                 # Defines the gateway listener.
    - name: sba-api-gateway
      namespace: spring-boot-sba
      sectionName: sba-tcp-listener
  rules:
    - backendRefs:                       # Defines the backend service.
        - kind: Service                  # Kubernetes Service.
          name: spring-boot-admin-server # Kubernetes Service name that points to the Consul Mesh service.
